; ModuleID = '/home/carl/AnghaBench/tengine/modules/ngx_http_lua_module/src/extr_ngx_http_lua_worker.c_ngx_http_lua_inject_worker_api.c'
source_filename = "/home/carl/AnghaBench/tengine/modules/ngx_http_lua_module/src/extr_ngx_http_lua_worker.c_ngx_http_lua_inject_worker_api.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ngx_http_lua_ngx_worker_exiting = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [8 x i8] c"exiting\00", align 1
@ngx_http_lua_ngx_worker_pid = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [4 x i8] c"pid\00", align 1
@ngx_http_lua_ngx_worker_id = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [3 x i8] c"id\00", align 1
@ngx_http_lua_ngx_worker_count = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [6 x i8] c"count\00", align 1
@.str.4 = private unnamed_addr constant [7 x i8] c"worker\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ngx_http_lua_inject_worker_api(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32*, i32** %2, align 8
  %4 = call i32 @lua_createtable(i32* %3, i32 0, i32 4)
  %5 = load i32*, i32** %2, align 8
  %6 = load i32, i32* @ngx_http_lua_ngx_worker_exiting, align 4
  %7 = call i32 @lua_pushcfunction(i32* %5, i32 %6)
  %8 = load i32*, i32** %2, align 8
  %9 = call i32 @lua_setfield(i32* %8, i32 -2, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0))
  %10 = load i32*, i32** %2, align 8
  %11 = load i32, i32* @ngx_http_lua_ngx_worker_pid, align 4
  %12 = call i32 @lua_pushcfunction(i32* %10, i32 %11)
  %13 = load i32*, i32** %2, align 8
  %14 = call i32 @lua_setfield(i32* %13, i32 -2, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i64 0, i64 0))
  %15 = load i32*, i32** %2, align 8
  %16 = load i32, i32* @ngx_http_lua_ngx_worker_id, align 4
  %17 = call i32 @lua_pushcfunction(i32* %15, i32 %16)
  %18 = load i32*, i32** %2, align 8
  %19 = call i32 @lua_setfield(i32* %18, i32 -2, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.2, i64 0, i64 0))
  %20 = load i32*, i32** %2, align 8
  %21 = load i32, i32* @ngx_http_lua_ngx_worker_count, align 4
  %22 = call i32 @lua_pushcfunction(i32* %20, i32 %21)
  %23 = load i32*, i32** %2, align 8
  %24 = call i32 @lua_setfield(i32* %23, i32 -2, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.3, i64 0, i64 0))
  %25 = load i32*, i32** %2, align 8
  %26 = call i32 @lua_setfield(i32* %25, i32 -2, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.4, i64 0, i64 0))
  ret void
}

declare dso_local i32 @lua_createtable(i32*, i32, i32) #1

declare dso_local i32 @lua_pushcfunction(i32*, i32) #1

declare dso_local i32 @lua_setfield(i32*, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
